2004-08-06  Richard Hult  <richard@imendio.com>

	* src/planner-task-cmd.c: 
	* src/planner-resource-cmd.c: Include config.h to fix i18n.

2004-07-24  Richard Hult  <richard@imendio.com>

	* src/planner-task-dialog.c
	(task_dialog_resource_units_cell_edited): Don't do anything unless
	the value changes. Fixes bug #148306.

2004-07-19  Richard Hult  <richard@imendio.com>

	* configure.in: Bump.

	* data/glade/html-output.glade: Re-save with old glade so we don't
	get runtime warnings when using older GTK+.

	* src/planner-window.c (window_print_cb): Set numeric locale to C
	temporarily as workaround for broken pdf output.

2004-07-08  Richard Hult  <richard@imendio.com>

	* Release 0.12.

	* configure.in: Bump version.
	* examples/sample-1.planner: Fix the sampe name.
	* src/planner-window.c: (window_update_title): Brand a bit.

2004-07-07  Richard Hult  <richard@imendio.com>

	* planner.spec.in: Put the sql storage in the right
	package. Redirect mime updating to /dev/null.

	* docs/user-guide/C/planner.xml: Fix up.

	* src/planner-window.c: Brand a bit.
	
2004-07-05  Richard Hult  <richard@imendio.com>

	* configure.in: Bump.

	* src/planner-resource-view.c:
	(resource_cmd_edit_custom_property): Remove string.

	* src/planner-task-dialog.c: (task_cmd_edit_sched): Change string
	that was completely wrong. Sorry translators, but this is better
	to have fuzzy than the wrong meaning.

	* src/planner-task-tree.c: (task_cmd_edit_custom_property): Remove
	string.

2004-07-02  Richard Hult  <richard@imendio.com>

	* src/planner-ttable-row.c: (ttable_row_realize),
	(ttable_row_draw_resource_ival): Draw vertical separators between
	the intervals.

2004-07-02  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-chart.c: Fix coding style in a few places.

	* src/planner-ttable-chart.c (ttable_chart_map):
	* src/planner-ttable-view.c: (ttable_view_project_loaded_cb): Add
	workaround to make this a bit better for 0.12.

2004-07-02  Richard Hult  <richard@imendio.com>
