@@ -1,3 +1,12 @@
+2004-08-21  Richard Hult  <richard@imendio.com>
+
+	* libplanner-1.pc.in:
+	* data/planner.desktop.in:
+	* libegg/recent-files:
+	* src/planner-table-print-sheet.c:
+	* src/planner-view-loader.c:
+	* src/planner-window.c: Merge fixes from HEAD.
+
 2004-08-06  Richard Hult  <richard@imendio.com>
 
 	* src/planner-task-cmd.c: 
